<resources>
    <string name="app_name">Cat Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Blank</string>
    <string name="cats">Cats</string>
    <string name="name">Name</string>
    <string name="new_kitty">New Cat</string>
    <string name="age">Age</string>
    <string name="color">Color</string>
    <string name="list_cats">Cats</string>
    <string name="cat_detail">Cat Detail</string>
    <string name="form_cat_title">New Cat</string>
    <string name="cat_name">Cat name</string>
    <string name="choose_color">Choose color</string>
    <string name="button">Button</string>
</resources>