<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/catListFragment2">
    <fragment
        android:id="@+id/catListFragment2"
        android:name="com.rgonzalez.cattracker.ui.list.CatListFragment"
        android:label="@string/list_cats" >
        <action
            android:id="@+id/action_catListFragment2_to_catFragment"
            app:destination="@id/catFragment" />
        <action
            android:id="@+id/action_catListFragment2_to_formCatFragment"
            app:destination="@id/formCatFragment" />
    </fragment>
    <fragment
        android:id="@+id/catFragment"
        android:name="com.rgonzalez.cattracker.ui.detail.CatFragment"
        android:label="@string/cat_detail"
        tools:layout="@layout/fragment_cat" />
    <fragment
        android:id="@+id/formCatFragment"
        android:name="com.rgonzalez.cattracker.ui.form.FormCatFragment"
        android:label="@string/form_cat_title" />
</navigation>